# oom-notifier

./: Cargo.toml  Dockerfile  README.md  oom_trigger.c  run_test.sh
k8s/: daemonset.yaml
src/: main.rs  notifiers.rs
