[package]
name = "oom-notifier"
version = "0.1.0"
authors = ["angelopoerio <angelo.poerio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.9.1"
lru = "0.6.5"
rmesg = "1.0.14"
gethostname = "0.2.1"
clap = "3.0.0-beta.2"
signal-hook = "0.3.9"
syslog = "5.0.0"
serde_json = "1.0"
elasticsearch = "7.12.1-alpha.1"
tokio = { version = "1.8.1", features = ["full"] }
