[package]
name = "oom-notifier"
version = "0.1.0"
authors = ["angelopoerio <angelo.poerio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
procfs = "0.9.1"
lru = "0.6.5"
rmesg = "1.0.14"
clap = "3.0.0-beta.2"
signal-hook = "0.3.9"
kafka = "0.8"
syslog = "5.0.0"
serde_json = "1.0"
elasticsearch = "7.12.1-alpha.1"
tokio = { version = "1.8.1", features = ["full"] }
